[gd_scene format=3 uid="uid://dld2h07b5m84u"]

[ext_resource type="Script" uid="uid://bbag0ipa3rc2m" path="res://entities/character/weapon/gun/gun.gd" id="1_rb21p"]
[ext_resource type="AudioStream" uid="uid://dfiq7pgtv1srv" path="res://assets/sound/Explosion3.wav" id="2_4bsfm"]
[ext_resource type="AudioStream" uid="uid://b0g4sqvl1puhw" path="res://assets/sound/Explosion4.wav" id="3_5k3b7"]
[ext_resource type="AudioStream" uid="uid://ogf0xofgd0d5" path="res://assets/sound/Explosion.wav" id="4_y3o73"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_75kxg"]
playback_mode = 1
streams_count = 3
stream_0/stream = ExtResource("2_4bsfm")
stream_1/stream = ExtResource("3_5k3b7")
stream_2/stream = ExtResource("4_y3o73")

[node name="Gun" type="Node2D" unique_id=1984785067]
script = ExtResource("1_rb21p")
ammo_capacity = 5
reload_time = 3.0
fire_rate = 0.6

[node name="FireRateTimer" type="Timer" parent="." unique_id=1561355225]

[node name="ReloadTimer" type="Timer" parent="." unique_id=516815009]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." unique_id=653975250]
stream = SubResource("AudioStreamRandomizer_75kxg")
volume_db = -20.556

[connection signal="timeout" from="FireRateTimer" to="." method="shoot_bullet"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
